--- a/Chat-UI/wwwroot/chatbot-ui.css
+++ b/Chat-UI/wwwroot/chatbot-ui.css
@@ -15,6 +15,16 @@
     --chat-header-bg: linear-gradient(160deg, dodgerblue 0%, #80D0C7 100%);
 }
 
+.btn-option {
+    padding: 0;
+    border: none;
+    background: none;
+}
+.btn-option:hover {
+     background: #ccc;
+
+}
+
 .chat-btn {
     position: fixed;
     right: 50px;
@@ -108,8 +118,9 @@
 }
 
 .bot-img {
-    width: 30px;
+    width: 35px;
     margin-right: 15px;
+    border-radius: 50%;
 }
 
 .bot-msg .msg {
